<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/get_code"
    android:layout_height="match_parent"
    >


    <ImageView
        android:src="@drawable/p1"
        android:id="@+id/imv_fb"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_username"
        android:layout_below="@id/imv_fb"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/hint_user"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_pass"
        android:layout_below="@id/edt_username"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID và pass mặc định là: admin"
        android:textColor="@color/white"
        android:layout_below="@+id/edt_pass"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_creat"
        android:layout_below="@id/tv1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@color/primary_orange"
        android:textColor="@color/white"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="login"
        />




</RelativeLayout>
