<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gameloft.com.easyorder_server.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/colorPrimary"
    >
<TableRow
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <TextView
        android:text="@string/hien_ten_mon"
        android:textSize="@dimen/hien_text_table"
        android:textAlignment="center"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:padding="1dp"
        android:background="@drawable/hien_border"
        />

    <TextView
        android:text="@string/hien_sl"
        android:textSize="@dimen/hien_text_table"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_gravity="center|fill"
        android:padding="1dp"
        android:background="@drawable/hien_border"
        />
    <TextView
        android:text="@string/hien_ghi_chu"
        android:textSize="@dimen/hien_text_table"
        android:padding="1dp"
        android:layout_weight="3"
        android:background="@drawable/hien_border"
        />
</TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/hien_ten_mon_t"
            android:textSize="@dimen/hien_text_table"
            android:textAlignment="center"
            android:layout_weight="10"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />

        <TextView
            android:text="@string/hien_sl_t"
            android:textSize="@dimen/hien_text_table"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />
        <TextView
            android:text="@string/hien_ghi_chu_t"
            android:textColor="@color/white"
            android:textSize="@dimen/hien_text_table"
            android:padding="1dp"
            android:layout_weight="3"
            android:background="@drawable/hien_border"
            />
    </TableRow> <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/hien_ten_mon_t"
            android:textSize="@dimen/hien_text_table"
            android:textAlignment="center"
            android:layout_weight="10"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />

        <TextView
            android:text="@string/hien_sl_t"
            android:textSize="@dimen/hien_text_table"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />
        <TextView
            android:text="@string/hien_ghi_chu_t"
            android:textColor="@color/white"
            android:textSize="@dimen/hien_text_table"
            android:padding="1dp"
            android:layout_weight="3"
            android:background="@drawable/hien_border"
            />
    </TableRow> <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="Sting string đâu"
            android:textSize="@dimen/hien_text_table"
            android:textAlignment="center"
            android:layout_weight="10"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />

        <TextView
            android:text="@string/hien_sl_t"
            android:textSize="@dimen/hien_text_table"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />
        <TextView
            android:text="Khong đá"
            android:textColor="@color/white"
            android:textSize="@dimen/hien_text_table"
            android:padding="1dp"
            android:layout_weight="3"
            android:background="@drawable/hien_border"
            />
    </TableRow> <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/hien_ten_mon_t"
            android:textSize="@dimen/hien_text_table"
            android:textAlignment="center"
            android:layout_weight="10"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />

        <TextView
            android:text="@string/hien_sl_t"
            android:textSize="@dimen/hien_text_table"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:padding="1dp"
            android:background="@drawable/hien_border"
            />
        <TextView
            android:text="@string/hien_ghi_chu_t"
            android:textColor="@color/white"
            android:textSize="@dimen/hien_text_table"
            android:padding="1dp"
            android:layout_weight="3"
            android:background="@drawable/hien_border"
            />
    </TableRow>


</TableLayout>
